--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <ul>
     <li><a href="main.html">Главная</a></li>
     <li><a href="about.html">О центре</a></li>
+    <li><a href="price.html">Прайс-лист</a></li>
   </ul>
 </div></body>
 </html>
