feat: add new version

--- a/main.html
+++ b/main.html
@@ -7,13 +7,16 @@
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="shortcut icon" href="assets/img/fav.ico" />
 <link rel="apple-touch-icon" href="assets/img/fav.png" />
-<link rel="icon" type="image/png" href="assets/img/favicon.png"></head>
+<link rel="icon" type="image/png" href="assets/img/favicon.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&family=Tenor+Sans&display=swap" rel="stylesheet"></head>
 <body>
 <div class="wrapper fix-footer">
   <div class="info">
     <div class="info-container container">
       <div class="info__left"><a class="info__link" href="tel:+74956645864" target="_blank">+7 (995) 965-30-03</a><span class="info__separator">|</span><a class="info__link" href="mailto:cnpp.dialectica@gmail.com" target="_blank">cnpp.dialectica@gmail.com</a></div>
-      <div class="info__socials socials"><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a></div>
+      <div class="info__socials socials"><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/youtube.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/vk.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/whatsapp.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a></div>
     </div>
   </div>
   <header class="header">
@@ -44,9 +47,200 @@
       </nav>
     </div>
   </header>
+  <section class="section-first main-1">
+    <div class="container">
+      <div class="main-1__col main-1__col-1">
+        <h1 class="title title-h1 main-1__title">Центр <span>DIALECTICA</span> — психологическая помощь по мировым стандартам</h1>
+        <h2 class="title title-h2 main-1__subtitle">Мы используем методы с научно доказанной эффективностью</h2>
+        <div class="main-1__btns"><a class="main-1__btn btn" href="">Выбрать специалиста</a><a class="main-1__btn btn" href="">Запись в группу DBT</a><a class="main-1__btn btn" href="">Запись на курс Skills for life</a></div>
+      </div>
+      <div class="main-1__col main-1__col-2">
+        <div class="main-1__block">
+          <div class="main-1__sub"><img src="./assets/img/clock.svg" alt=""/><span>ЧАСЫ РАБОТЫ</span></div>
+          <div class="main-1__text">Время Новосибирское</div>
+          <div class="main-1__line"></div>
+          <div class="main-1__table">
+            <div class="main-1__cl">Понедельник - пятница <br> 10:00 — 19:00</div>
+            <div class="main-1__cl">Суббота <br> 10:00 — 15:00</div>
+          </div>
+          <div class="main-1__line"></div><a class="main-1__link" href="tel:+79959653003"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M18.9746 19.9693C17.0202 21.9236 12.0153 20.0873 7.79578 15.8677C3.57623 11.6482 1.7399 6.64325 3.69421 4.68893L4.98098 3.40216C5.8693 2.51383 7.33305 2.53731 8.25034 3.45461L10.2434 5.4477C11.1607 6.36499 11.1842 7.82874 10.2959 8.71706L10.0195 8.99345C9.53988 9.47307 9.49295 10.2468 9.93861 10.7868C10.3685 11.3078 10.8319 11.8266 11.3344 12.3291C11.8369 12.8316 12.3557 13.295 12.8766 13.7249C13.4167 14.1705 14.1904 14.1236 14.67 13.644L14.9464 13.3676C15.8347 12.4793 17.2985 12.5028 18.2158 13.4201L20.2089 15.4131C21.1262 16.3304 21.1496 17.7942 20.2613 18.6825L18.9746 19.9693Z" stroke="currentColor" stroke-width="2"></path>
+<path d="M17.539 8.75071C17.295 8.15553 16.9314 7.5979 16.4481 7.11463C15.9921 6.65865 15.47 6.30918 14.9125 6.06622" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+<path d="M14.9125 2.66341C16.2472 3.14691 17.4994 3.92365 18.5694 4.99364C19.6662 6.09049 20.4549 7.37883 20.9355 8.75113" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+</svg> +7 (995) 965-30-03</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="section"></section>
-  <section class="section"></section>
-  <section class="section"></section>
+  <section class="section">
+    <div class="main-2 container">
+      <h2 class="main-2__title title title-h2">Наши специалисты</h2>
+      <div class="main-2__text description">Клинические психологи и психотерапевты с высшим медицинским образованием. Наша команда специалистов каждую неделю совершенствует свои навыки и тактику ведения клиентов. Мы работаем при поддержке Ассоциации когнитивно — бихевиоральных терапевтов и Института Behavioral Tech (Сиэтл, США).</div>
+      <div class="main-2__grid"><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          <div class="item__info">
+            <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
+            <div class="item__subtitle">Клинический психолог</div>
+            <div class="item__text">
+              <p>
+                <ul>
+                  <li>Терапия принятия и ответственности (АСТ)</li>
+                  <li>Когнитивно-поведенческая терапия (CBT)</li>
+                  <li>Терапия, сфокусированная на сострадании (CFT)</li>
+                </ul>
+              </p>
+              <p><span class="info-title">Специализация:</span>
+                <div class="info-text">Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.</div>
+              </p>
+            </div>
+          </div></a>
+      </div>
+    </div>
+  </section>
   <section class="section"></section>
   <section class="section"></section>
   <section class="section form">
@@ -112,14 +306,14 @@
           <div class="footer__text">Фрунзе 20 / Белинского 7 <br> Томск, Томская обл. (посмотреть на карте)</div></a>
         <div class="line"></div>
         <div class="footer-title">Мы в соц сетях</div>
-        <div class="footer-socials socials"><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="/assets/img/telegram.svg" alt="YouTube"/></a></div>
+        <div class="footer-socials socials"><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a></div>
       </div>
       <div class="footer-col footer-col-2">
         <div class="footer-title">Направления работы</div>
-        <ul class="footer-menu">
-          <li class="menu-item"><a href="">Суицидальное поведение/самоповреждение</a></li>
-          <li class="menu-item"><a href="">Расстройства пищевого поведения</a></li>
-          <li class="menu-item"> <a href="">Обучение специалистов</a></li>
+        <ul class="footer-menu list">
+          <li class="menu-item list__item"><a href="">Суицидальное поведение/самоповреждение</a></li>
+          <li class="menu-item list__item"><a href="">Расстройства пищевого поведения</a></li>
+          <li class="menu-item list__item"><a href="">Обучение специалистов</a></li>
           <li class="menu-item btn-menu footer-btn"><a href="">Все направления</a></li>
         </ul>
       </div>
