--- a/price.html
+++ b/price.html
@@ -7,13 +7,16 @@
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="shortcut icon" href="assets/img/fav.ico" />
 <link rel="apple-touch-icon" href="assets/img/fav.png" />
-<link rel="icon" type="image/png" href="assets/img/favicon.png"></head>
+<link rel="icon" type="image/png" href="assets/img/favicon.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&family=Tenor+Sans&display=swap" rel="stylesheet"></head>
 <body>
 <div class="wrapper fix-footer">
   <div class="info">
     <div class="info-container container">
       <div class="info__left"><a class="info__link" href="tel:+74956645864" target="_blank">+7 (995) 965-30-03</a><span class="info__separator">|</span><a class="info__link" href="mailto:cnpp.dialectica@gmail.com" target="_blank">cnpp.dialectica@gmail.com</a></div>
-      <div class="info__socials socials"><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a></div>
+      <div class="info__socials socials"><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/youtube.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/vk.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/whatsapp.svg" alt="YouTube"/></a><a class="socials__link" href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank"><img class="socials__icon" src="./assets/img/telegram.svg" alt="YouTube"/></a></div>
     </div>
   </div>
   <header class="header">
@@ -116,10 +119,10 @@
       </div>
       <div class="footer-col footer-col-2">
         <div class="footer-title">Направления работы</div>
-        <ul class="footer-menu">
-          <li class="menu-item"><a href="">Суицидальное поведение/самоповреждение</a></li>
-          <li class="menu-item"><a href="">Расстройства пищевого поведения</a></li>
-          <li class="menu-item"> <a href="">Обучение специалистов</a></li>
+        <ul class="footer-menu list">
+          <li class="menu-item list__item"><a href="">Суицидальное поведение/самоповреждение</a></li>
+          <li class="menu-item list__item"><a href="">Расстройства пищевого поведения</a></li>
+          <li class="menu-item list__item"><a href="">Обучение специалистов</a></li>
           <li class="menu-item btn-menu footer-btn"><a href="">Все направления</a></li>
         </ul>
       </div>
