--- a/assets/img/stack/sprite.stack.html
+++ b/assets/img/stack/sprite.stack.html
@@ -18,7 +18,11 @@ They might well be outsourced to an external stylesheet of course.
 
 <style type="text/css">
 	.svg-arrow-dims { width: 16px; height: 9px; }
-	.svg-telegram-dims { width: 512px; height: 512px; }
+	.svg-clock-dims { width: 18px; height: 24px; }
+	.svg-telegram-dims { width: 23px; height: 22px; }
+	.svg-vk-dims { width: 30px; height: 20px; }
+	.svg-whatsapp-dims { width: 24px; height: 24px; }
+	.svg-youtube-dims { width: 27px; height: 21px; }
 </style>
 
 <!--
@@ -58,6 +62,15 @@ selector is used to show the very shape that is referenced by the fragment ident
 					</div>
 					<h2>arrow</h2>
 				</li>
+				<li title="clock">
+					<div class="icon-box">
+
+						<!-- clock -->
+						<img src="icons/icons.svg#clock" class="svg-clock-dims" alt="clock"/>
+
+					</div>
+					<h2>clock</h2>
+				</li>
 				<li title="telegram">
 					<div class="icon-box">
 
@@ -67,6 +80,33 @@ selector is used to show the very shape that is referenced by the fragment ident
 					</div>
 					<h2>telegram</h2>
 				</li>
+				<li title="vk">
+					<div class="icon-box">
+
+						<!-- vk -->
+						<img src="icons/icons.svg#vk" class="svg-vk-dims" alt="vk"/>
+
+					</div>
+					<h2>vk</h2>
+				</li>
+				<li title="whatsapp">
+					<div class="icon-box">
+
+						<!-- whatsapp -->
+						<img src="icons/icons.svg#whatsapp" class="svg-whatsapp-dims" alt="whatsapp"/>
+
+					</div>
+					<h2>whatsapp</h2>
+				</li>
+				<li title="youtube">
+					<div class="icon-box">
+
+						<!-- youtube -->
+						<img src="icons/icons.svg#youtube" class="svg-youtube-dims" alt="youtube"/>
+
+					</div>
+					<h2>youtube</h2>
+				</li>
 			</ul>
 
 <!--
@@ -75,7 +115,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 		</section>
 		<footer>
-			<p>Generated at Wed, 01 Feb 2023 11:34:00 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+			<p>Generated at Fri, 10 Feb 2023 10:19:26 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
 		</footer>
 	</body>
 </html>
