--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <li><a href="main.html">Главная</a></li>
     <li><a href="about.html">О центре</a></li>
     <li><a href="price.html">Прайс-лист</a></li>
+    <li><a href="disorder.html">Страница расстройства</a></li>
+    <li><a href="departments.html">Наши направления</a></li>
+    <li><a href="rules.html">Правила получения услуг</a></li>
   </ul>
 </div></body>
 </html>
