feat: add new version

--- a/assets/img/stack/sprite.stack.html
+++ b/assets/img/stack/sprite.stack.html
@@ -19,8 +19,17 @@ They might well be outsourced to an external stylesheet of course.
 <style type="text/css">
 	.svg-arrow-dims { width: 16px; height: 9px; }
 	.svg-clock-dims { width: 18px; height: 24px; }
+	.svg-departments-dims { width: 190px; height: 190px; }
+	.svg-heart-dims { width: 70px; height: 63px; }
+	.svg-logo-dims { width: 759px; height: 153px; }
+	.svg-profile-dims { width: 30px; height: 30px; }
+	.svg-stomach-dims { width: 71px; height: 65px; }
 	.svg-telegram-dims { width: 23px; height: 22px; }
 	.svg-vk-dims { width: 30px; height: 20px; }
+	.svg-welcome-1-dims { width: 100px; height: 100px; }
+	.svg-welcome-2-dims { width: 101px; height: 101px; }
+	.svg-welcome-3-dims { width: 103px; height: 103px; }
+	.svg-welcome-4-dims { width: 100px; height: 100px; }
 	.svg-whatsapp-dims { width: 24px; height: 24px; }
 	.svg-youtube-dims { width: 27px; height: 21px; }
 </style>
@@ -71,6 +80,51 @@ selector is used to show the very shape that is referenced by the fragment ident
 					</div>
 					<h2>clock</h2>
 				</li>
+				<li title="departments">
+					<div class="icon-box">
+
+						<!-- departments -->
+						<img src="icons/icons.svg#departments" class="svg-departments-dims" alt="departments"/>
+
+					</div>
+					<h2>departments</h2>
+				</li>
+				<li title="heart">
+					<div class="icon-box">
+
+						<!-- heart -->
+						<img src="icons/icons.svg#heart" class="svg-heart-dims" alt="heart"/>
+
+					</div>
+					<h2>heart</h2>
+				</li>
+				<li title="logo">
+					<div class="icon-box">
+
+						<!-- logo -->
+						<img src="icons/icons.svg#logo" class="svg-logo-dims" alt="logo"/>
+
+					</div>
+					<h2>logo</h2>
+				</li>
+				<li title="profile">
+					<div class="icon-box">
+
+						<!-- profile -->
+						<img src="icons/icons.svg#profile" class="svg-profile-dims" alt="profile"/>
+
+					</div>
+					<h2>profile</h2>
+				</li>
+				<li title="stomach">
+					<div class="icon-box">
+
+						<!-- stomach -->
+						<img src="icons/icons.svg#stomach" class="svg-stomach-dims" alt="stomach"/>
+
+					</div>
+					<h2>stomach</h2>
+				</li>
 				<li title="telegram">
 					<div class="icon-box">
 
@@ -88,6 +142,42 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 					</div>
 					<h2>vk</h2>
+				</li>
+				<li title="welcome-1">
+					<div class="icon-box">
+
+						<!-- welcome-1 -->
+						<img src="icons/icons.svg#welcome-1" class="svg-welcome-1-dims" alt="welcome-1"/>
+
+					</div>
+					<h2>welcome-1</h2>
+				</li>
+				<li title="welcome-2">
+					<div class="icon-box">
+
+						<!-- welcome-2 -->
+						<img src="icons/icons.svg#welcome-2" class="svg-welcome-2-dims" alt="welcome-2"/>
+
+					</div>
+					<h2>welcome-2</h2>
+				</li>
+				<li title="welcome-3">
+					<div class="icon-box">
+
+						<!-- welcome-3 -->
+						<img src="icons/icons.svg#welcome-3" class="svg-welcome-3-dims" alt="welcome-3"/>
+
+					</div>
+					<h2>welcome-3</h2>
+				</li>
+				<li title="welcome-4">
+					<div class="icon-box">
+
+						<!-- welcome-4 -->
+						<img src="icons/icons.svg#welcome-4" class="svg-welcome-4-dims" alt="welcome-4"/>
+
+					</div>
+					<h2>welcome-4</h2>
 				</li>
 				<li title="whatsapp">
 					<div class="icon-box">
@@ -115,7 +205,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 		</section>
 		<footer>
-			<p>Generated at Fri, 10 Feb 2023 10:19:26 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+			<p>Generated at Thu, 16 Feb 2023 05:31:21 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
 		</footer>
 	</body>
 </html>
