--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <li><a href="price.html">Прайс-лист</a></li>
     <li><a href="disorder.html">Страница расстройства</a></li>
     <li><a href="departments.html">Наши направления</a></li>
+    <li><a href="specialist.html">Специалист</a></li>
     <li><a href="rules.html">Правила получения услуг</a></li>
+    <li><a href="course.html">Skills for life</a></li>
   </ul>
 </div></body>
 </html>
