--- a/course.html
+++ b/course.html
@@ -21,7 +21,7 @@
   </div>
   <header class="header">
     <div class="header-container container">
-      <div class="header__left"><a class="header-logo" href=""><img class="header-logo__link" src="../assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="../assets/img/logo.svg"/></a></div>
+      <div class="header__left"><a class="header-logo" href=""><img class="header-logo__link" src="./assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="./assets/img/logo.svg"/></a></div>
       <div class="header__center">
         <nav class="header-menu">
           <ul class="menu">
@@ -136,7 +136,7 @@
   <section class="section course-3">
     <div class="container">
       <h2 class="title title-h2 course-3__title">Ведущие группы:</h2>
-      <div class="course-3__row items-grid"><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+      <div class="course-3__row items-grid"><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
           <div class="item__info">
             <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
             <div class="item__subtitle">Клинический психолог</div>
@@ -154,7 +154,7 @@
               </div>
               <div class="btn item__btn">подробнее</div>
             </div>
-          </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+          </div></a><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
           <div class="item__info">
             <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
             <div class="item__subtitle">Клинический психолог</div>
