--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
   </div>
   <header class="header">
     <div class="header-container container">
-      <div class="header__left"><a class="header-logo" href=""><img class="header-logo__link" src="../assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="../assets/img/logo.svg"/></a></div>
+      <div class="header__left"><a class="header-logo" href=""><img class="header-logo__link" src="./assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="./assets/img/logo.svg"/></a></div>
       <div class="header__center">
         <nav class="header-menu">
           <ul class="menu">
@@ -132,7 +132,7 @@
       <div class="container">
         <h2 class="main-3__title title title-h2">Наши специалисты</h2>
         <div class="main-3__text description">Клинические психологи и психотерапевты с высшим медицинским образованием. Наша команда специалистов каждую неделю совершенствует свои навыки и тактику ведения клиентов. Мы работаем при поддержке Ассоциации когнитивно — бихевиоральных терапевтов и Института Behavioral Tech (Сиэтл, США).</div>
-        <div class="main-3__grid items-grid"><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+        <div class="main-3__grid items-grid"><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
             <div class="item__info">
               <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
               <div class="item__subtitle">Клинический психолог</div>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="btn item__btn">подробнее</div>
               </div>
-            </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+            </div></a><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
             <div class="item__info">
               <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
               <div class="item__subtitle">Клинический психолог</div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="btn item__btn">подробнее</div>
               </div>
-            </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+            </div></a><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
             <div class="item__info">
               <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
               <div class="item__subtitle">Клинический психолог</div>
@@ -186,7 +186,7 @@
                 </div>
                 <div class="btn item__btn">подробнее</div>
               </div>
-            </div></a><a class="item" href=""><img class="item__img" src="../assets/img/item-1.png" alt=""/>
+            </div></a><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
             <div class="item__info">
               <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
               <div class="item__subtitle">Клинический психолог</div>
