--- a/rules.html
+++ b/rules.html
@@ -21,7 +21,7 @@
   </div>
   <header class="header">
     <div class="header-container container">
-      <div class="header__left"><a class="header-logo" href=""><img class="header-logo__link" src="../assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="../assets/img/logo.svg"/></a></div>
+      <div class="header__left"><a class="header-logo" href=""><img class="header-logo__link" src="./assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="./assets/img/logo.svg"/></a></div>
       <div class="header__center">
         <nav class="header-menu">
           <ul class="menu">
