feat: add final version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="disorder.html">Страница расстройства</a></li>
     <li><a href="departments.html">Наши направления</a></li>
     <li><a href="specialist.html">Специалист</a></li>
+    <li><a href="specialists.html">Специалисты центра</a></li>
     <li><a href="rules.html">Правила получения услуг</a></li>
     <li><a href="course.html">Skills for life</a></li>
   </ul>
