--- a/assets/img/stack/sprite.stack.html
+++ b/assets/img/stack/sprite.stack.html
@@ -19,6 +19,7 @@ They might well be outsourced to an external stylesheet of course.
 <style type="text/css">
 	.svg-arrow-dims { width: 16px; height: 9px; }
 	.svg-clock-dims { width: 18px; height: 24px; }
+	.svg-close-dims { width: 24px; height: 24px; }
 	.svg-departments-dims { width: 190px; height: 190px; }
 	.svg-heart-dims { width: 70px; height: 63px; }
 	.svg-logo-dims { width: 759px; height: 153px; }
@@ -79,6 +80,15 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 					</div>
 					<h2>clock</h2>
+				</li>
+				<li title="close">
+					<div class="icon-box">
+
+						<!-- close -->
+						<img src="icons/icons.svg#close" class="svg-close-dims" alt="close"/>
+
+					</div>
+					<h2>close</h2>
 				</li>
 				<li title="departments">
 					<div class="icon-box">
@@ -205,7 +215,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 		</section>
 		<footer>
-			<p>Generated at Thu, 16 Feb 2023 05:31:21 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+			<p>Generated at Wed, 01 Mar 2023 15:09:19 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
 		</footer>
 	</body>
 </html>
