--- a/about.html
+++ b/about.html
@@ -68,14 +68,14 @@
     </div>
   </header>
   <section class="section-first">
-    <div class="first-template about-1">
+    <div class="first-template about-1"><img class="first-template__img" src="./assets/img/about-bg.png" alt=""/>
       <div class="first-template__block">
         <h1 class="title title-h1 first-template__title">Центр <span>DIALECTICA</span></h1>
         <div class="title title-h2 first-template__subtitle">Создайте жизнь, которую стоит прожить</div><a class="btn first-template__btn" href="">Записаться на прием</a>
       </div>
     </div>
   </section>
-  <section class="section">
+  <section class="section section-pos">
     <div class="container about-2">
       <div class="about-2__row">
         <div class="about-2__col about-2__col-1">
@@ -113,33 +113,35 @@
       </div>
     </div>
   </section>
-  <div class="infographics">
-    <div class="infographics__item infographics__item_1">
-      <div class="infographics__number"><span>более </span>
-        <div class="counter" data-target="1000">1000</div>
+  <section class="section-pos">
+    <div class="infographics">
+      <div class="infographics__item infographics__item_1">
+        <div class="infographics__number"><span>более </span>
+          <div class="counter" data-target="1000">1000</div>
+        </div>
+        <div class="infographics__title">Счастливых пациентов</div>
       </div>
-      <div class="infographics__title">Счастливых пациентов</div>
-    </div>
-    <div class="infographics__item infographics__item_2">
-      <div class="infographics__number">
-        <div class="counter" data-target="7">7</div>
+      <div class="infographics__item infographics__item_2">
+        <div class="infographics__number">
+          <div class="counter" data-target="7">7</div>
+        </div>
+        <div class="infographics__title">Специалистов</div>
       </div>
-      <div class="infographics__title">Специалистов</div>
-    </div>
-    <div class="infographics__item infographics__item_3">
-      <div class="infographics__number">
-        <div class="counter" data-target="4">4</div>
+      <div class="infographics__item infographics__item_3">
+        <div class="infographics__number">
+          <div class="counter" data-target="4">4</div>
+        </div>
+        <div class="infographics__title">Спец. направления</div>
       </div>
-      <div class="infographics__title">Спец. направления</div>
-    </div>
-    <div class="infographics__item infographics__item_4">
-      <div class="infographics__number">
-        <div class="counter" data-target="40">40</div>
+      <div class="infographics__item infographics__item_4">
+        <div class="infographics__number">
+          <div class="counter" data-target="40">40</div>
+        </div>
+        <div class="infographics__title">Независимых исследований методики</div>
       </div>
-      <div class="infographics__title">Независимых исследований методики</div>
     </div>
-  </div>
-  <section class="section form">
+  </section>
+  <section class="section form section-pos">
     <div class="form-container container">
       <h2 class="title title-h2 form__title">Запись на первичный приём к специалисту</h2>
       <div class="line"></div>
