--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="specialists.html">Специалисты центра</a></li>
     <li><a href="rules.html">Правила получения услуг</a></li>
     <li><a href="course.html">Skills for life</a></li>
+    <li><a href="page.html">Семейные связи</a></li>
   </ul>
 </div></body>
 </html>
