--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </header>
-  <section class="section-first main-1">
+  <section class="section-first main-1"><img class="main-1__img" src="./assets/img/bg-first.png" alt=""/>
     <div class="container">
       <div class="main-1__col main-1__col-1">
         <h1 class="main-1__title">Центр <span>DIALECTICA</span> — психологическая помощь по мировым стандартам</h1>
@@ -98,7 +98,7 @@
       </div>
     </div>
   </section>
-  <section class="section">
+  <section class="section section-pos main-2">
     <div class="container main-2">
       <div class="main-2__row">
         <div class="main-2__left">Мы занимаемся когнитивно-поведенческой терапией и специализируемся в нескольких направлениях: <br> — когнитивная терапия <br> — диалектическая-поведенческая терапия <br> — терапия принятия и ответственности.</div>
@@ -124,7 +124,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="section-departments">
     <div class="container departments">
       <div class="departments__row">
         <div class="departments__left"> 
@@ -147,7 +147,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="section-pos">
     <div class="main-3">
       <div class="container">
         <h2 class="main-3__title title title-h2">Наши специалисты</h2>
@@ -229,7 +229,7 @@
       </div>
     </div>
   </section>
-  <section class="section">
+  <section class="section section-pos">
     <div class="container main-4">
       <h2 class="title title-h2 main-4__title">Новости</h2>
       <div class="main-4__block">
@@ -270,7 +270,7 @@
       </div>
     </div>
   </section>
-  <section class="section form">
+  <section class="section form section-pos">
     <div class="form-container container">
       <h2 class="title title-h2 form__title">Запись на первичный приём к специалисту</h2>
       <div class="line"></div>
