--- a/specialist.html
+++ b/specialist.html
@@ -116,7 +116,7 @@
       </div>
     </div>
   </section>
-  <section class="section form">
+  <section class="section form section-pos">
     <div class="form-container container">
       <h2 class="title title-h2 form__title">Запись на первичный приём к специалисту</h2>
       <div class="line"></div>
