--- a/specialists.html
+++ b/specialists.html
@@ -70,7 +70,10 @@
   <section class="section section-first">
     <div class="container specialists">
       <h1 class="title title-h1 specialists__title">Специалисты ЦНПП DIALECTICA</h1>
-      <div class="specialists__row"><a class="btn" href="">Записаться на прием</a><a class="btn" href="">Подобрать специалиста</a></div>
+      <div class="specialists__row"><a class="btn" href="">Записаться на прием</a><a class="btn" href="">
+          Подобрать специалиста<svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M18.7397 16.5137L3.03038 0.804321L0.088044 3.74666L15.7972 19.4558H0.6422V23.6169H20.8203H22.9008V21.5364V1.35831H18.7397V16.5137Z" fill="#fff"/>
+</svg></a></div>
       <div class="specilists__grid items-grid"><a class="item" href=""><img class="item__img" src="./assets/img/item-1.png" alt=""/>
           <div class="item__info">
             <div class="item__title">СЕРГЕЙ СТАРОВЕРОВ</div>
@@ -255,7 +258,7 @@
       </div>
     </div>
   </section>
-  <section class="section form">
+  <section class="section form section-pos">
     <div class="form-container container">
       <h2 class="title title-h2 form__title">Запись на первичный приём к специалисту</h2>
       <div class="line"></div>
